# flow-matching-project

./: .gitignore  README.md  hello.py  pyproject.toml  train.py  train_arg_parser.py
models/: discrete_unet.py  model_configs.py  unet.py
path/: __init__.py  affine.py  geodesic.py  mixture.py  path.py
path/scheduler/: schedule_transform.py  scheduler.py
solver/: discrete_solver.py  ode_solver.py  riemannian_ode_solver.py  solver.py
training/: edm_time_discretization.py  eval_loop.py  grad_scaler.py  train_loop.py
utils/: fid_wrapper.py  model_wrapper.py
utils/manifolds/: sphere.py  torus.py  utils.py
