[project]
name = "flow-matching-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "numpy>=2.2.5",
    "ruff>=0.11.7",
    "torch>=2.7.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics[image]>=1.7.1",
    "torchvision>=0.22.0",
]

[tool.ruff.lint]
ignore = ["E731", "E501"]
